--- a/backend/miniapp/src/main/resources/application.properties
+++ b/backend/miniapp/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=miniapp
-spring.datasource.url=jdbc:postgresql://<HOST>:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=SupaServer1!
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${SUPABASE_USERNAME}
+spring.datasource.password=${SUPABASE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-jwt.secret=super-secret-key-change-this
+jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 
 server.port=8080
