--- a/backend/miniapp/src/main/resources/application.properties
+++ b/backend/miniapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=miniapp
-spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-2.pooler.supabase.com:5432/postgres?user=postgres.tcexnqtihsgdrkcoyjra&password=${SUPABASE_PASSWORD}
-spring.datasource.username=${SUPABASE_USERNAME}
+spring.datasource.url=jdbc:postgresql://aws-1-ap-northeast-2.pooler.supabase.com:5432/postgres?user=${SUPABASE_USERNAME}&password=${SUPABASE_PASSWORD}
+spring.datasource.username=postgres
 spring.datasource.password=${SUPABASE_PASSWORD}
 
 spring.datasource.hikari.maximum-pool-size=5
