feat(mobile and tailwind): added tailwind to my web and implemented mobile frontend for app

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,19 @@ web/dist/
 web/.vite/
 web/.env
 
+###################################
+# Android
+###################################
+**/.gradle/
+**/local.properties
+**/.idea/
+**/build/
+**/app/build/
+**/*.iml
+**/.cxx/
+**/captures/
+**/.externalNativeBuild/
+
 # ===============================
 # IDEs / OS
 # ===============================
